# RatoNet

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
hardware-streamer/: .env.example  README.md  requirements.txt
hardware-streamer/ratonet/: config.py
hardware-streamer/ratonet/common/: logger.py  protocol.py
hardware-streamer/ratonet/field/: encoder.py  main.py
ratonet/: __init__.py  config.py
ratonet/dashboard/: admin.py  db.py  geocoder.py  main.py  models.py  routes.py  ws_handler.py
ratonet/field/: bonding.py  main.py  network_monitor.py  setup.py  telemetry.py
ratonet/server/: health.py  main.py  obs_controller.py  relay.py  srt_receiver.py
static/admin/: index.html
static/overlays/: health.html  livepix.html  location.html  map.html  speed.html
static/panel/: index.html
static/pwa/: index.html  manifest.json  sw.js  tracker.html
tests/: test_config.py  test_db.py  test_geocoder.py  test_models.py  test_relay.py  test_routes.py
